Create endpoint /api/routes DELETE
